# rusmart

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  cov.sh  coverage.sh  log.txt
cli/: Cargo.toml
cli/src/: cli.rs  dep.rs  dep_cvc5.rs  dep_z3.rs  git.rs  lib.rs  main.rs
doc/book/: book.toml
doc/book/dict/: crate-derive.md  crate-remark.md
doc/book/src/: SUMMARY.md  annotations.md  stdlib.md  syntax.md
doc/book/src/dev/: deps.md  doc.md  pipeline.md  project-setup.md  project-structure.md
doc/book/src/dev/crates/: cli.md  smt.md  utils.md
doc/book/src/dev/crates/smt/: remark.md  stdlib.md  testing.md
doc/book/src/user/: annotations.md
lang/demo/: Cargo.toml  README.md
lang/demo/src/: eval.rs
lang/rego/: Cargo.toml  build.rs
lang/rego/src/: eval.rs  lib.rs  main.rs
smt/derive/: Cargo.toml  cov.sh
smt/derive/src/: ctxt.rs  lib.rs  parse_ctxt.rs  parse_expr.rs  parse_expr_intrinsic.rs  parse_expr_match.rs  parse_expr_method.rs  parse_func.rs  parse_infer.rs  parse_infer_expr.rs  parse_path.rs  parse_type.rs
smt/derive/src/analysis/: adt.rs  mod.rs  sort.rs
smt/derive/src/backend/: codegen.rs  error.rs  exec.rs  mod.rs
smt/derive/src/backend/cvc5/: common.rs  engine_smt.rs  mod.rs  snippet.rs  template.cmake
smt/derive/src/backend/z3/: common.rs  engine_chc.rs  mod.rs  session.rs  snippet.rs  template.cmake
smt/derive/src/ir/: axiom.rs  ctxt.rs  exp.rs  fun.rs  index.rs  intrinsics.rs  mod.rs  mono.rs  name.rs  sort.rs
smt/derive/src/parser/: adt.rs  apply.rs  attr.rs  ctxt.rs  dsl.rs  err.rs  expr.rs  func.rs  generics.rs  infer.rs  intrinsics.rs  mod.rs  name.rs  pat.rs  path.rs  test.rs  ty.rs  util.rs
smt/derive/tests/: integration.rs
smt/derive/tests/derive/: basic.rs
smt/mock/: Cargo.toml
smt/mock/src/: lib.rs
smt/remark/: Cargo.toml  cov.sh
smt/remark/remark_derive/: Cargo.toml
smt/remark/remark_derive/src/: lib.rs
smt/remark/src/: attr.rs  err.rs  func.rs  generics.rs  lib.rs  ty.rs
smt/stdlib/: Cargo.toml
smt/stdlib/src/: dsl.rs  dt.rs  exp.rs  lib.rs
smt/testing/: Cargo.toml  cov.sh
smt/testing/src/: lib.rs
smt/testing/tests/: integration.rs  test_parser.rs  test_remark.rs
smt/testing/tests/model/: mod.rs
smt/testing/tests/model/backend/: mod.rs
smt/testing/tests/model/parser/: adt_enum_no_variants.exp  adt_enum_no_variants.rs  adt_enum_ok.rs  adt_enum_variant_record_no_fields.exp  adt_enum_variant_record_no_fields.rs  adt_enum_variant_tuple_no_slots.exp  adt_enum_variant_tuple_no_slots.rs  adt_struct_as_unit.rs  adt_struct_no_fields.exp  adt_struct_no_fields.rs  adt_struct_ok.rs  adt_tuple_no_slots.rs  adt_tuple_ok.rs  attr_ok.rs  axiom_not_boolean_return.exp  axiom_not_boolean_return.rs  axiom_ok.rs  duplicated_axiom.exp  duplicated_axiom.rs  duplicated_impl.exp  duplicated_impl.rs  duplicated_spec.exp  duplicated_spec.rs  duplicated_type.rs  expr_call_default_by_sys_ty.exp  expr_call_default_by_sys_ty.rs  expr_call_default_by_ty_param.exp  expr_call_default_by_ty_param.rs  expr_call_default_by_usr_ty.exp  expr_call_default_by_usr_ty.rs  expr_call_func_cast_ok.rs  expr_call_func_plain_nonexist.exp  expr_call_func_plain_nonexist.rs  expr_call_func_plain_ok.rs  expr_call_sys_func_ok.rs  expr_enum_ok.rs  expr_field_ok.rs  expr_if_let.exp  expr_if_let.rs  expr_if_not_bool_deref.exp  (+105 more)
utils/: Cargo.toml
utils/src/: config.rs  display.rs  lib.rs
