[workspace]
members = [
    # ordered and grouped loosely by dependency relation
    "utils",
    "cli",
    "smt/stdlib",
    "smt/remark",
    "smt/derive",
    "smt/testing",
    "lang/demo",
    "lang/rego",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.13", features = ["derive"] }
command-group = "5.0.1"
datatest-stable = "0.2.9"
internment = { version = "0.8.4", features = ["arc"] }
itertools = "0.13.0"
lazy_static = "1.5.0"
log = "0.4.22"
num_cpus = "1.16.0"
num-bigint = "0.4.6"
num-rational = "0.4.2"
num-traits = "0.2.19"
petgraph = "0.6.5"
proc-macro2 = "1.0.86"
quote = "1.0.36"
tempfile = "3.11.0"
simplelog = "0.12.2"
syn = { version = "2.0.72", features = ["full", "extra-traits"] }
walkdir = "2.5.0"

rusmart-utils = { path = "utils" }
rusmart-cli = { path = "cli" }
rusmart-smt-stdlib = { path = "smt/stdlib" }
rusmart-smt-remark = { path = "smt/remark" }
rusmart-smt-derive = { path = "smt/derive" }