[package]
name = "rusmart-cli"
description = "Command line interfnace for the Rusmart project"
version = "0.1.0"
authors = ["Meng Xu <meng.xu.cs@uwaterloo.ca>"]
license = "GPL-3.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
log = { workspace = true }
tempfile = { workspace = true }
rusmart-utils = { workspace = true }