[package]
name = "rusmart-cli"
description = "Command-line interface for Rusmart"
version = "0.1.0"
edition = "2021"
authors = ["Meng Xu <meng.xu.cs@uwaterloo.ca>"]
license = "GPL-3.0"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
log = { workspace = true }
tempfile = { workspace = true }
rusmart-utils = { workspace = true }