[package]
name = "rusmart-utils"
description = "Utilities shared amonst various crates in Rusmart"
version = "0.1.0"
authors = ["Meng Xu <meng.xu.cs@uwaterloo.ca>"]
license = "GPL-3.0"
edition = "2021"

[dependencies]
lazy_static = { workspace = true }
log = { workspace = true }
num_cpus = { workspace = true }
simplelog = { workspace = true }