[package]
name = "rusmart-utils"
description = "Utility functions shared among Rusmart crates"
version = "0.1.0"
edition = "2021"
authors = ["Meng Xu <meng.xu.cs@uwaterloo.ca>"]
license = "GPL-3.0"

[dependencies]
lazy_static = { workspace = true }
log = { workspace = true }
num_cpus = { workspace = true }
simplelog = { workspace = true }