[package]
name = "rusmart-lang-demo"
description = "Declarative semantics for a Demo language"
version = "0.1.0"
authors = ["Meng Xu <meng.xu.cs@uwaterloo.ca>"]
license = "GPL-3.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
rusmart-utils = { path = "../../utils" }
rusmart-smt-stdlib = { path = "../../smt/stdlib" }
rusmart-smt-remark = { path = "../../smt/remark" }
rusmart-smt-derive = { path = "../../smt/derive" }