[package]
name = "rusmart-lang-rego"
description = "Declarative semantics for the Rego language"
version = "0.1.0"
edition = "2021"
authors = ["Meng Xu <meng.xu.cs@uwaterloo.ca>"]
license = "GPL-3.0"

[dependencies]
anyhow = { workspace = true }
rusmart-utils = { workspace = true }
rusmart-smt-stdlib = { workspace = true }
rusmart-smt-remark = { workspace = true }
rusmart-smt-derive = { workspace = true }