[package]
name = "rusmart-smt-derive"
description = "SMT model derivation from Rust code"
version = "0.1.0"
authors = ["Meng Xu <meng.xu.cs@uwaterloo.ca>"]
license = "GPL-3.0"
edition = "2021"

[dependencies]
anyhow = "1.0.80"
command-group = "5.0.1"
itertools = "0.12.1"
lazy_static = "1.4.0"
log = "0.4.21"
petgraph = "0.6.4"
proc-macro2 = "1.0.78"
quote = "1.0.35"
syn = { version = "2.0.52", features = ["full", "extra-traits"] }
walkdir = "2.5.0"
rusmart-cli = { path = "../../cli" }
rusmart-utils = { path = "../../utils" }