[package]
name = "rusmart-smt-derive"
description = "SMT model derivation from Rust code"
version = "0.1.0"
edition = "2021"
authors = ["Meng Xu <meng.xu.cs@uwaterloo.ca>"]
license = "GPL-3.0"

[dependencies]
anyhow = { workspace = true }
command-group = { workspace = true }
itertools = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
petgraph = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
walkdir = { workspace = true }
rusmart-cli = { workspace = true }
rusmart-utils = { workspace = true }