[package]
name = "rusmart-smt-stdlib"
description = "Standard Rust library for SMT elements in semantics modeling"
version = "0.1.0"
authors = ["Meng Xu <meng.xu.cs@uwaterloo.ca>"]
license = "GPL-3.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
internment = { workspace = true }
itertools = { workspace = true }
num-bigint = { workspace = true }
num-rational = { workspace = true }
num-traits = { workspace = true }
