[package]
name = "rusmart-smt-testing"
description = "Test suites for the SMT component"
version = "0.1.0"
authors = ["Meng Xu <meng.xu.cs@uwaterloo.ca>"]
license = "GPL-3.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
automod = "1.0.14"
datatest-stable = "0.2.3"
rusmart-utils = { path = "../../utils" }
rusmart-smt-stdlib = { path = "../stdlib" }
rusmart-smt-remark = { path = "../remark" }
rusmart-smt-derive = { path = "../derive" }

[[test]]
name = "integration"
harness = false