[package]
name = "rusmart-smt-testing"
description = "Test suites for the SMT component"
version = "0.1.0"
edition = "2021"
authors = ["Meng Xu <meng.xu.cs@uwaterloo.ca>"]
license = "GPL-3.0"

[dev-dependencies]
anyhow = { workspace = true }
datatest-stable = { workspace = true }
tempfile = { workspace = true }
rusmart-utils = { workspace = true }
rusmart-smt-stdlib = { workspace = true }
rusmart-smt-remark-derive = { workspace = true }
rusmart-smt-derive = { workspace = true }

[lints.rust]
non_camel_case_types = "allow"
unused = "allow"

[lints.clippy]
all = "allow"

[[test]]
name = "integration"
harness = false